tests/baselines/reference/mutuallyRecursiveGenericBaseTypes2.errors.txt
mutuallyRecursiveGenericBaseTypes2.ts(3,24): error TS2322: Type 'null' is not assignable to type 'foo2<T[]>'.


==== mutuallyRecursiveGenericBaseTypes2.ts (1 errors) ====
    class foo<T>
    {
        bar(): foo2<T[]> { return null; }
                           ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'foo2<T[]>'.
    }
     
    class foo2<T> extends foo<T> {
    }
     
    var test = new foo<string>();
    